common/test/keyboards/invalid/compiler/source/CERR_401D_k_034___options_double_set_reset.kmn
store(&NAME) '034 - options double set reset'
c Description: Tests basic option rules with save reset+set+reset
c keys: [K_A][K_A]
c expected: foo.foo.
c context: 
c option: foo=1
c expected option: foo=1

store(&version) '10.0'

store(foo) '0'

begin Unicode > use(Main)

group(Main) using keys

c ***** CERR_StoreDoesNotExist 0x0000401D ***********************************
if(foo = '1') + 'a' > 'foo.' set(foo='2') reset(ffoo) set(foo='3') reset(foo)
c *******************************************************************
if(foo = '2') + 'a' > 'bar.'
if(foo = '3') + 'a' > 'baz.'
if(foo = '0') + 'a' > 'no foo.'
